--- a/Areas/Doctor/Views/Treatments/Index.cshtml
+++ b/Areas/Doctor/Views/Treatments/Index.cshtml
@@ -176,7 +176,7 @@
                                                 }
                                             </td>
                                             <td>
-                                                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-primary">
+                                                <a asp-action="TreatmentDetails" asp-route-treatmentTypeId="@item.TreatmentTypeId" class="btn btn-sm btn-primary">
                                                     <i class="bi bi-eye me-1"></i>View
                                                 </a>
                                             </td>
